discussion/kv_engine/165258/165258_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48684: Move encodeDocKey to storage_common

So that it can be re-used in magma

Change-Id: I18e2a64a494e298d4ef03cd937361c1338b67194

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-08 16:03:53.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-08 16:47:32.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41614/ : FAILURE

Failure of GoogleTest "TransportProtocols/AuditTest.AuditFailedAuth/Mcbp":

<pre>
[ RUN      ] TransportProtocols/AuditTest.AuditFailedAuth/Mcbp
unknown file: error: C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 0ms for a response for CONFIG_RELOAD" thrown in SetUp().
unknown file: error: C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 0ms for a response for CONFIG_RELOAD" thrown in TearDown().
[  FAILED  ] TransportProtocols/AuditTest.AuditFailedAuth/Mcbp, where GetParam() = Mcbp (4006 ms)
TransportProtocols/AuditTest.AuditFailedAuth/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41614/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13853/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/doc_key_encoder.h:21:23: error: use of undeclared identifier "cb" [clang-diagnostic-error]
        auto leb128 = cb::mcbp::unsigned_leb128<uint64_t>(2);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/doc_key_encoder.h:29:19: error: use of undeclared identifier "cb" [clang-diagnostic-error]
    auto leb128 = cb::mcbp::unsigned_leb128<uint64_t>(cid);
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13853/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/doc_key_encoder.h:21:23:
error: use of undeclared identifier "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13853/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15754/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23809/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23809/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35335/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12655/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15470/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16445/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14640/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3488/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3560/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-08 16:49:36.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15765/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15765/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13864/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13864/ )

CMake error: platform/CMakeLists.txt:40 (message) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13864/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15481/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15481/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16457/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23820/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23820/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14652/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14652/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3499/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3499/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3571/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3571/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12666/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
